--- a/assets/custom/main.css
+++ b/assets/custom/main.css
@@ -151,28 +151,6 @@ div.article-category-item .item-box:hover{
     font-weight: 500!important;
 }
 
-/*WRAP1 SECTION*/
-#wrap1-section {
-
-    padding-top:70px;
-    padding-bottom: 30px;
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    color: #FFF;
-    background: url("../image/background/wrap1_bg.jpg") no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-color: #FFF;
-}
-    #wrap1-section .container {
-        padding-top:200px;
-    }
-
 /*SERVICE SECTION*/
 #service-section {
     padding-top:70px;
@@ -278,28 +256,6 @@ div.article-category-item .item-box:hover{
     text-align: center;
 }
 
-/*WRAP2 SECTION*/
-#wrap2-section {
-
-    padding-top:70px;
-    padding-bottom: 30px;
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    color: #FFF;
-    background: url("../image/background/wrap2_bg.png") no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-color: #FFF;
-}
-    #wrap2-section .container {
-        padding-top:200px;
-    }
-
 /*HOW We Work SeCTION*/
 #how-we-work-section {
     padding-top:70px;
@@ -319,85 +275,63 @@ div.article-category-item .item-box:hover{
     font-size: 1.4vw;
     text-align: center;
 }
-    .bg-process{
-        position: relative;
-        max-width: 779px;
-        width: 100%;
-        margin: auto;
-        margin-top: 0px;
-    }
-    .item-process{
-        position: absolute;
-        max-width: 17%;
-        max-height: 14%;
-        width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-    }
-    #item-process-1{
-        background-image:url('../image/how-we-work/1-01.png');
-        top: 2%;
-        left: 13%;
-    }
-    #item-process-2{
-        background-image:url('../image/how-we-work/2-01.png');
-        top: 14.5%;
-        left: 32%;
-    }
-    #item-process-3{
-        background-image:url('../image/how-we-work/3-01.png');
-        top: 24%;
-        left: 55%;
-    }
-    #item-process-4{
-        background-image:url('../image/how-we-work/4-01.png');
-        top: 36.5%;
-        left: 32%;
-    }
-    #item-process-5{
-        background-image:url('../image/how-we-work/5-01.png');
-        top: 36.5%;
-        left: 9%;
-    }
-    #item-process-6{
-        background-image:url('../image/how-we-work/6-01.png');
-        top: 57%;
-        left: 10%;
-    }
-    #item-process-7{
-        background-image:url('../image/how-we-work/7-01.png');
-        top: 68%;
-        left: 32%;
-    }
-    #item-process-8{
-        background-image:url('../image/how-we-work/8-01.png');
-        top: 79%;
-        left: 52%;
-    }
-
-/*WRAP3 SECTION*/
-#wrap3-section {
-
-    padding-top:70px;
-    padding-bottom: 30px;
+.bg-process{
     position: relative;
+    max-width: 779px;
     width: 100%;
-    min-height: 100vh;
-    color: #FFF;
-    background: url("../image/background/wrap3_bg.png") no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-color: #FFF;
+    margin: auto;
+    margin-top: 0px;
 }
-    #wrap3-section .container {
-        padding-top:200px;
-    }
+.item-process{
+    position: absolute;
+    max-width: 17%;
+    max-height: 14%;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+#item-process-1{
+    background-image:url('../image/how-we-work/1-01.png');
+    top: 2%;
+    left: 13%;
+}
+#item-process-2{
+    background-image:url('../image/how-we-work/2-01.png');
+    top: 14.5%;
+    left: 32%;
+}
+#item-process-3{
+    background-image:url('../image/how-we-work/3-01.png');
+    top: 24%;
+    left: 55%;
+}
+#item-process-4{
+    background-image:url('../image/how-we-work/4-01.png');
+    top: 36.5%;
+    left: 32%;
+}
+#item-process-5{
+    background-image:url('../image/how-we-work/5-01.png');
+    top: 36.5%;
+    left: 9%;
+}
+#item-process-6{
+    background-image:url('../image/how-we-work/6-01.png');
+    top: 57%;
+    left: 10%;
+}
+#item-process-7{
+    background-image:url('../image/how-we-work/7-01.png');
+    top: 68%;
+    left: 32%;
+}
+#item-process-8{
+    background-image:url('../image/how-we-work/8-01.png');
+    top: 79%;
+    left: 52%;
+}
 
 /*OUR TEAM*/
 #our-team-section {
@@ -431,7 +365,7 @@ div.article-category-item .item-box:hover{
 }
 .our-team-item img.team-img{
     margin: 0 auto;
-    width: 150px;
+    width: 180px;
     display: block;
     text-align: center;
 }
@@ -450,8 +384,8 @@ div.article-category-item .item-box:hover{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255,203,31,0.9);
-    opacity: 0.5;
+    background: rgba(255,203,31,0.8);
+    opacity: 0.7;
     z-index: 1;
 }
 .sosmed-ul{
@@ -465,9 +399,13 @@ div.article-category-item .item-box:hover{
 }
 .sosmed-ul li{
     display: inline-block;
-    padding: 2px;
+    padding: 5px;
 }
 
+.sosmed-ul li a img{
+    width: 45px;
+    height: auto;
+}
 /*CONTACT US*/
 #contact-us-section{
     padding-top:70px;
@@ -483,4 +421,57 @@ div.article-category-item .item-box:hover{
     -o-background-size: cover;
     background-size: cover;
     background-color: #FFF;
+}
+
+/*WRAP1 SECTION*/
+.transition-text{
+    padding-top:100px;
+    padding-bottom: 100px;
+    position: relative;
+    width: 100%;
+    color: #000;
+    background-position: center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: #ffcb1f;
+}
+.transition-text p {
+    font-size: 20px;
+}
+#wrap1-section {
+    /*
+    padding-top:70px;
+    padding-bottom: 30px;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    color: #FFF;
+    background: url("../image/background/wrap1_bg.jpg") no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: #FFF;
+    */
+}
+#wrap1-section .container {
+}
+
+/*WRAP2 SECTION*/
+#wrap2-section {
+
+}
+#wrap2-section .container {
+
+}
+
+/*WRAP3 SECTION*/
+#wrap3-section {
+}
+#wrap3-section .container {
 }
