--- a/assets/custom/main.css
+++ b/assets/custom/main.css
@@ -24,7 +24,6 @@
 
 .parallax{
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
@@ -36,7 +35,7 @@
     padding-top:50px;
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     color: #fff;
     background-image: url("../image/background/home_bg.png");
 }
@@ -171,6 +170,7 @@ div.article-category-item .item-box:hover{
     min-height: 100vh;
     color: #fff;
     background-image: url("../image/background/servie_bg.png");
+    background-attachment: fixed;
 }
 #service-section h1{
     font-size: 3vw;
